syntax = "proto3";

option go_package = "./;cluster";

message ClusterTypeDTO {
    string code = 1;
    string name = 2;
}

message ClusterVersionDTO {
    string code = 1;
    string name = 2;
}